feat: add session progression references
